<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation= "vertical"
    android:gravity="center_horizontal">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/logo2"/>
    
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:textColor="#00aced"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:textColor="#00aced"
        android:hint="@string/password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:textColor="#0084b4"
        android:backgroundTint="#c0deed"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#0084b4"
            android:text="@string/not_registered" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#0084b4"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>